tests/baselines/reference/importAssertion4.errors.txt
tests/cases/conformance/importAssertion/importAssertion4.ts(1,20): error TS2307: Cannot find module './first' or its corresponding type declarations.
tests/cases/conformance/importAssertion/importAssertion4.ts(2,1): error TS1005: '{' expected.


==== tests/cases/conformance/importAssertion/importAssertion4.ts (2 errors) ====
    import * as f from "./first" assert
                       ~~~~~~~~~
!!! error TS2307: Cannot find module './first' or its corresponding type declarations.
    
    
!!! error TS1005: '{' expected.